blogdomain-ingress-traefik.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress-sample-domain2-managed-server
  namespace: sample-domain2-ns
  labels:
    weblogic.domainUID: sample-domain2
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host:
    http:
      paths:
      - path:
        backend:
          serviceName: sample-domain2-managed-server-0
          servicePort: 8001
